--- a/module3-dimensionality-reduction/LS_DS_133_High_Dimensional_Data_Assignment.ipynb
+++ b/module3-dimensionality-reduction/LS_DS_133_High_Dimensional_Data_Assignment.ipynb
@@ -63,7 +63,7 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "because you cant have multiple values for one y value."
       ]
     },
     {
@@ -101,6 +101,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "W51K1539xbU1",
+        "colab_type": "text"
+      },
+      "source": [
+        "Relation 2 is the only Relation that is a function, because it is the only Relation with no repeating x value."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "y0U30PrlTAAa",
         "colab_type": "text"
       },
@@ -122,6 +132,19 @@
         "\\\\\n",
         "n(𝑥_1,𝑥_2,𝑥_3,𝑥_4)=(x_2^2 + x_3, x_2x_4)\n",
         "\\end{align}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mDjuLvCtB70p",
+        "colab_type": "text"
+      },
+      "source": [
+        "1) R^3 to R^3\n",
+        "\n",
+        "\n",
+        "2) R^4 to R^2"
       ]
     },
     {
@@ -267,11 +290,11 @@
       "metadata": {
         "id": "Us4nNFs02HlD",
         "colab_type": "code",
+        "outputId": "974e831f-cd76-41ed-c225-8ab4d1fea275",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 351
-        },
-        "outputId": "974e831f-cd76-41ed-c225-8ab4d1fea275"
+        }
       },
       "source": [
         "from urllib.request import urlopen\n",
@@ -296,7 +319,7 @@
         "print(national.shape)\n",
         "national.head()"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -870,7 +893,7 @@
         "# a lot of object datatypes even though they seem to be strings of numbers.\n",
         "national.dtypes"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -962,7 +985,7 @@
         "# check for null values\n",
         "national.isnull().sum().any()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -997,7 +1020,7 @@
         "print(f'{len(cat_cols)} categorical columns')\n",
         "print(f'{len(num_cols)} numerical columns')"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1033,7 +1056,7 @@
         "\n",
         "national_processed.dtypes"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1115,11 +1138,11 @@
       "metadata": {
         "id": "ymxU-aPtQ1eq",
         "colab_type": "code",
+        "outputId": "02fe0fad-81bb-404c-a4cd-92242cfe4c6c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "02fe0fad-81bb-404c-a4cd-92242cfe4c6c"
+        }
       },
       "source": [
         "# Replace all category cell values with their numeric category codes\n",
@@ -1129,7 +1152,7 @@
         "print(national_processed.shape)\n",
         "national_processed.head()"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1692,17 +1715,17 @@
       "metadata": {
         "id": "6NS5AQpcQ8Je",
         "colab_type": "code",
+        "outputId": "3cbe9b8e-05e4-4126-f072-030c8d2ac7b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "3cbe9b8e-05e4-4126-f072-030c8d2ac7b4"
+        }
       },
       "source": [
         "# Now we only ahve numeric columns (ints and floats)\n",
         "national_processed.dtypes"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
